--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	}
+  "name": "obsidian-eml-reader",
+  "version": "1.0.0",
+  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "main": "main.js",
+  "scripts": {
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "dev": "node esbuild.config.mjs",
+    "start": "run-p watch dev",
+    "version": "node version-bump.mjs && git add manifest.json versions.json",
+    "watch": "node ./watch.js"
+  },
+  "keywords": [],
+  "author": "pulsovi",
+  "license": "GNU AGPLv3",
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
+    "@types/mailparser": "^3",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "builtin-modules": "3.3.0",
+    "esbuild": "0.17.3",
+    "eslint-config-pulsovi-typescript": "^0.4.0",
+    "eslint_d": "^12.2.1",
+    "fs-extra": "^11.1.1",
+    "mailparser": "^3.6.5",
+    "nanoid": "^4.0.2",
+    "npm-run-all": "^4.1.5",
+    "obsidian": "latest",
+    "tslib": "2.4.0",
+    "typescript": "^4.7.4"
+  },
+  "packageManager": "yarn@3.6.3"
 }
