--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "eml-reader",
+	"name": "Email Reader",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "This plugin provide a preview mode for attachments of `*.eml` files.",
+	"author": "Pulsovi",
+	"authorUrl": "https://marchev.fr",
+	"fundingUrl": "https://www.buymeacoffee.com/pulsovi",
 	"isDesktopOnly": false
 }
