--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "GNU AGPLv3",
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
-    "@types/mailparser": "^3",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
@@ -24,10 +23,11 @@
     "eslint-config-pulsovi-typescript": "^0.4.0",
     "eslint_d": "^12.2.1",
     "fs-extra": "^11.1.1",
-    "mailparser": "^3.6.5",
+    "js-base64": "^3.7.5",
     "nanoid": "^4.0.2",
     "npm-run-all": "^4.1.5",
     "obsidian": "latest",
+    "postal-mime": "^1.0.16",
     "tslib": "2.4.0",
     "typescript": "^4.7.4"
   },
