--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
 	"name": "Email Reader",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This plugin provide a preview mode for attachments of `*.eml` files.",
+	"description": "Provide a preview mode for embeded `*.eml` files.",
 	"author": "Pulsovi",
 	"authorUrl": "https://marchev.fr",
 	"fundingUrl": "https://www.buymeacoffee.com/pulsovi",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
