fix: disable on mobile devices

--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
 	"author": "Pulsovi",
 	"authorUrl": "https://marchev.fr",
 	"fundingUrl": "https://www.buymeacoffee.com/pulsovi",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
