--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^16.11.6",
+    "@types/showdown": "^2",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "builtin-modules": "3.3.0",
@@ -28,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "obsidian": "latest",
     "postal-mime": "^1.0.16",
+    "showdown": "^2.1.0",
     "tslib": "2.4.0",
     "typescript": "^4.7.4"
   },
