--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "obsidian-eml-reader",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "dev": "node esbuild.config.mjs",
     "start": "run-p watch dev",
-    "version": "node version-bump.mjs && git add manifest.json versions.json",
+    "version": "node version-bump.mjs && git add manifest.json versions.json && git commit -m 'chore: bump version' && git tag $npm_package_version",
     "watch": "node ./watch.js"
   },
   "keywords": [],
